_SOFTWARE_FACTORY/_archive/veligo/ralph-wiggum/logs/D002_20260112_171148.log
Je vais analyser l'état actuel du Rate Limiting et le configurer si nécessaire.
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/middleware/rate_limiter.rs
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/bin/tonic-server.rs
Je vois que le rate limiter existe avec la config correcte (`/auth: 5/min`, `/api: 30/min`), mais c'est un middleware Axum. Vérifions s'il est activé et si Redis fonctionne.
[91m[1m| [0m[90m Bash     [0mCheck Redis connectivity locally

PONG

[94m[1m| [0m[90m Grep     [0mrate_limit
Le rate limiter est implémenté dans `http-server.rs` (Axum HTTP), pas dans `tonic-server.rs` (gRPC). Vérifions si le middleware est bien activé:
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/bin/http-server.rs
Le rate limiter est **activé** dans `http-server.rs`:
- Ligne 68: Import du middleware
- Lignes 167-191: Initialisation Redis
- Lignes 317-323: Application du middleware au router

Vérifions que le build passe et testons le rate limiting:
[91m[1m| [0m[90m Bash     [0mBuild backend with rate limiter

   |
53 | impl BookingServiceImpl {
   | ----------------------- method in this implementation
...
59 |     async fn resolve_tenant_id(&self, tenant_id: &str) -> Result<Uuid, Status> {
   |              ^^^^^^^^^^^^^^^^^

warning: `veligo-api` (bin "tonic-server") generated 6 warnings (run `cargo fix --bin "tonic-server" -p veligo-api` to apply 1 suggestion)
error[E0252]: the name `Arc` is defined multiple times
  --> backend/src/bin/http-server.rs:59:5
   |
14 | use std::sync::Arc;
   |     -------------- previous import of the type `Arc` here
...
59 | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^ `Arc` reimported here
   |
   = note: `Arc` must be defined only once in the type namespace of this module

warning: unused import: `std::sync::Arc`
  --> backend/src/bin/http-server.rs:59:5
   |
59 | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0252`.
warning: `veligo-api` (bin "http-server") generated 1 warning
error: could not compile `veligo-api` (bin "http-server") due to 1 previous error; 1 warning emitted

Erreur de compilation: `Arc` importé deux fois. Correction rapide:
[92m[1m| [0m[90m Edit     [0mveligo-platform/backend/src/bin/http-server.rs
[91m[1m| [0m[90m Bash     [0mRebuild backend after Arc fix

   Compiling serde_urlencoded v0.7.1
   Compiling colored v2.2.0
   Compiling indicatif v0.17.11
   Compiling h2 v0.3.27
   Compiling notify v6.1.1
   Compiling chrono v0.4.42
   Compiling icu_provider v2.1.1
   Compiling icu_normalizer v2.1.1
   Compiling icu_properties v2.1.2
   Compiling sha2 v0.10.9
   Compiling idna_adapter v1.2.1
   Compiling idna v1.1.0
   Compiling rand v0.8.5
   Compiling base64 v0.22.1
   Compiling url v2.5.7
   Compiling hyper v0.14.32
   Compiling hyper-tls v0.5.0
   Compiling reqwest v0.11.27
   Compiling veligo v0.1.0 (/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-cli)
    Finished `release` profile [optimized] target(s) in 39.71s

Build OK. Vérifions les tests unitaires du rate limiter:
[91m[1m| [0m[90m Bash     [0mRun rate limiter unit tests

error: no library targets found in package `veligo`

[91m[1m| [0m[90m Bash     [0mRun rate limiter tests in veligo-api

error: package ID specification `veligo-api` did not match any packages

[91m[1m| [0m[90m Bash     [0mGet package name from Cargo.toml

name = "veligo-api"
name = "http-server"
name = "tonic-server"

[91m[1m| [0m[90m Bash     [0mRun rate limiter tests


warning: function `create_test_tenant` is never used
   --> backend/tests/integration/mod.rs:347:14
    |
347 | pub async fn create_test_tenant(pool: &PgPool, name: &str) -> Uuid {
    |              ^^^^^^^^^^^^^^^^^^

warning: function `create_test_user` is never used
   --> backend/tests/integration/mod.rs:371:14
    |
371 | pub async fn create_test_user(pool: &PgPool, email: &str, password_hash: &str) -> Uuid {
    |              ^^^^^^^^^^^^^^^^

warning: function `create_test_user_with_role` is never used
   --> backend/tests/integration/mod.rs:391:14
    |
391 | pub async fn create_test_user_with_role(
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: field `error` is never read
  --> backend/tests/integration/test_subscription_flow.rs:41:5
   |
38 | struct SubscriptionResponse {
   |        -------------------- field in this struct
...
41 |     error: Option<String>,
   |     ^^^^^
   |
   = note: `SubscriptionResponse` has a derived impl for the trait `Debug`, but this is intentionally ignored during dead code analysis

warning: fields `user_id`, `tenant_id`, and `stripe_subscription_id` are never read
  --> backend/tests/integration/test_subscription_flow.rs:47:5
   |
45 | struct SubscriptionData {
   |        ---------------- fields in this struct
46 |     id: Uuid,
47 |     user_id: Uuid,
   |     ^^^^^^^
48 |     tenant_id: Uuid,
   |     ^^^^^^^^^
...
51 |     stripe_subscription_id: Option<String>,
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `SubscriptionData` has a derived impl for the trait `Debug`, but this is intentionally ignored during dead code analysis

warning: field `error` is never read
  --> backend/tests/integration/test_subscription_flow.rs:59:5
   |
56 | struct SubscriptionListResponse {
   |        ------------------------ field in this struct
...
59 |     error: Option<String>,
   |     ^^^^^
   |
   = note: `SubscriptionListResponse` has a derived impl for the trait `Debug`, but this is intentionally ignored during dead code analysis

warning: `veligo-api` (bin "tonic-server") generated 6 warnings (5 duplicates) (run `cargo fix --bin "tonic-server" -p veligo-api` to apply 1 suggestion)
warning: `veligo-api` (test "api_tests") generated 6 warnings
warning: `veligo-api` (test "integration_tests") generated 15 warnings (run `cargo fix --test "integration_tests" -p veligo-api` to apply 6 suggestions)

[91m[1m| [0m[90m Bash     [0mRun rate limiter module tests
